--- a/graphics/jasper/Makefile
+++ b/graphics/jasper/Makefile
@@ -35,6 +35,7 @@ OPENGL_CMAKE_BOOL=	JAS_ENABLE_OPENGL
 OPENGL_USE=		GL=gl,glu,glut XORG=x11,xext,xi,xmu
 OPENGL_USES=		gl xorg
 CMAKE_ARGS+= -DCMAKE_INSTALL_MANDIR=${MANPREFIX}/man
+LDFLAGS+= -lglut
 
 post-install-DOCS-on:
 	${MKDIR} ${STAGEDIR}${DOCSDIR}
