--- a/x11-toolkits/wlroots/Makefile
+++ b/x11-toolkits/wlroots/Makefile
@@ -36,7 +36,7 @@ GL_COMMIT=	9f41627aa10a94d9427bc315fa3d363a61b94d7c
 MESON_ARGS=	-Dexamples=false -Dbackends=${BACKENDS:ts,} -Drenderers=${RENDERERS:ts,}
 
 OPTIONS_DEFINE=	DRM NVIDIA OPENGL VULKAN X11
-OPTIONS_DEFAULT=DRM OPENGL VULKAN X11
+OPTIONS_DEFAULT=DRM OPENGL VULKAN
 OPTIONS_SUB=	yes
 
 DRM_DESC=		KMS console support
