--- a/x11/waybar/Makefile
+++ b/x11/waybar/Makefile
@@ -8,7 +8,7 @@ COMMENT=	Highly customizable Wayland bar for Sway and wlroots-based compositors
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-BUILD_DEPENDS=	wayland-protocols>0:graphics/wayland-protocols
+#BUILD_DEPENDS=	wayland-protocols>0:graphics/wayland-protocols
 LIB_DEPENDS=	libdate-tz.so:devel/date \
 		libjsoncpp.so:devel/jsoncpp \
 		libfmt.so:devel/libfmt \
