--- a/x11/kitty/Makefile
+++ b/x11/kitty/Makefile
@@ -26,7 +26,7 @@ LIB_DEPENDS=	libdbus-1.so:devel/dbus \
 		libwayland-cursor.so:graphics/wayland \
 		libxkbcommon.so:x11/libxkbcommon
 
-USES=		compiler:c11 cpe gettext-runtime gl gmake ncurses:port pkgconfig \
+USES=		compiler:c11 cpe gettext-runtime gl gmake pkgconfig \
 		python:3.5+ shebangfix terminfo xorg
 USE_GITHUB=	yes
 GH_ACCOUNT=	kovidgoyal
