--- a/x11/grim/Makefile
+++ b/x11/grim/Makefile
@@ -23,7 +23,7 @@ OPTIONS_DEFAULT=JPEG MANPAGES
 
 MANPAGES_BUILD_DEPENDS=	scdoc:textproc/scdoc
 MANPAGES_MESON_ENABLED=	man-pages
-MANPAGES_PLIST_FILES=	man/man1/${PORTNAME}.1.gz
+MANPAGES_PLIST_FILES=	share/man/man1/${PORTNAME}.1.gz
 
 JPEG_USES=	jpeg
 JPEG_MESON_ENABLED=	jpeg
